# htmx_todo

./: Cargo.toml
src/: add_todo.rs  app_state.rs  main.rs  todo.rs  todo_list.rs
templates/: add_todo.html  index.html  todo_list.html
