[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.74"
axum = {version="0.7.0", features = ["ws"]}
futures = "0.3"
http = "1.0.0"
hyper = "1.0.1"
serde = {version="1", features=["derive"]}
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.56"
